[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "view_py"
version = "0.1.0"
description = "Convert cadnano DNA origami designs to oxView format"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["view_py*"]
